--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
+python-dotenv>=0.19.0
+mutagen>=1.45.1
 pydub>=0.25.1
 pyacrcloud>=1.0.7
 yt-dlp>=2023.7.6
 requests>=2.31.0
 configparser>=5.3.0
-python-dotenv>=1.0.0
