chore: Update .env.example to match new configuration structure
- Update ACRCloud variable names
- Remove unused settings
- Group settings by functionality
- Add output directory setting

--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,19 @@
 # ACRCloud Configuration
-ACRCLOUD_ACCESS_KEY=your_access_key_here
-ACRCLOUD_ACCESS_SECRET=your_access_secret_here
-ACRCLOUD_HOST=identify-eu-west-1.acrcloud.com
-ACRCLOUD_TIMEOUT=10
-
-# Application Settings
-SEGMENT_LENGTH=30
-MIN_CONFIDENCE=70
-OUTPUT_FORMAT=json
-VERBOSE=false
+ACR_ACCESS_KEY=your_access_key_here
+ACR_ACCESS_SECRET=your_access_secret_here
+ACR_HOST=identify-eu-west-1.acrcloud.com
+ACR_TIMEOUT=10
 
 # Track Identification Settings
+SEGMENT_LENGTH=30
+MIN_CONFIDENCE=70
 TIME_THRESHOLD=60
-MIN_TRACK_LENGTH=30
 MAX_DUPLICATES=2
 
-# API Rate Limiting
-MAX_REQUESTS_PER_MINUTE=60
-RATE_LIMIT_ENABLED=true
+# Output Settings
+OUTPUT_FORMAT=json
+OUTPUT_DIR=tracklists
 
-# Cache Settings
-CACHE_ENABLED=true
-CACHE_DURATION=86400  # 24 hours in seconds
+# Application Settings
+VERBOSE=false
+MAX_REQUESTS_PER_MINUTE=60
