feat: Add performance optimizations
- Add caching for API responses
- Implement rate limiting
- Optimize memory usage during audio processing
- Update configuration with cache and rate limit settings
- Add memory-efficient chunk-based audio reading

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,9 @@ OUTPUT_DIR=tracklists
 # Application Settings
 VERBOSE=false
 MAX_REQUESTS_PER_MINUTE=60
+RATE_LIMIT_ENABLED=true
+
+# Cache Settings
+CACHE_ENABLED=true
+CACHE_DIR=.cache
+CACHE_DURATION=86400  # 24 hours in seconds
