--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,11 @@ RATE_LIMIT_ENABLED=true
 CACHE_ENABLED=true
 CACHE_DIR=.cache
 CACHE_DURATION=86400  # 24 hours in seconds
+
+# Provider Settings
+PRIMARY_PROVIDER=acrcloud
+METADATA_PROVIDERS=spotify
+
+# Spotify Configuration
+SPOTIFY_CLIENT_ID=your_spotify_client_id
+SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
