--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-python-dotenv>=0.19.0
-mutagen>=1.45.1
+python-dotenv==1.0.1
+mutagen==1.47.0
 pydub>=0.25.1
 pyacrcloud>=1.0.7
-yt-dlp>=2023.7.6
+yt-dlp==2024.3.10
 requests>=2.31.0
 configparser>=5.3.0
+acrcloud==1.0.1
+aiohttp==3.9.3
+pytest==8.0.2
+pytest-asyncio==0.23.5
+pytest-cov==4.1.0
