docs: add contributing guide and improve config
Added:
- Comprehensive CONTRIBUTING.md with dev setup
- Code style and linting guidelines
- Pre-commit hooks configuration

Changed:
- Enhanced .env.example with new configurations
- Updated CHANGELOG.md with version 0.5.1
- Improved documentation structure

This commit improves the developer experience by providing
clear setup instructions and configuration guidelines.

--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,27 @@ ACR_ACCESS_SECRET=your_access_secret_here
 ACR_HOST=identify-eu-west-1.acrcloud.com
 ACR_TIMEOUT=10
 
+# Shazam Configuration
+SHAZAM_API_KEY=your_shazam_api_key_here
+SHAZAM_TIMEOUT=10
+
+# Spotify Configuration
+SPOTIFY_CLIENT_ID=your_spotify_client_id_here
+SPOTIFY_CLIENT_SECRET=your_spotify_client_secret_here
+SPOTIFY_TIMEOUT=10
+
 # Track Identification Settings
 SEGMENT_LENGTH=30
 MIN_CONFIDENCE=70
 TIME_THRESHOLD=60
 MAX_DUPLICATES=2
+
+# Audio Processing Settings
+SAMPLE_RATE=44100
+WINDOW_SIZE=2048
+HOP_LENGTH=512
+N_MELS=128
+PRE_EMPHASIS=0.97
 
 # Output Settings
 OUTPUT_FORMAT=json
@@ -18,16 +34,7 @@ OUTPUT_DIR=tracklists
 VERBOSE=false
 MAX_REQUESTS_PER_MINUTE=60
 RATE_LIMIT_ENABLED=true
-
-# Cache Settings
 CACHE_ENABLED=true
 CACHE_DIR=.cache
-CACHE_DURATION=86400  # 24 hours in seconds
-
-# Provider Settings
-PRIMARY_PROVIDER=acrcloud
-METADATA_PROVIDERS=spotify
-
-# Spotify Configuration
-SPOTIFY_CLIENT_ID=your_spotify_client_id
-SPOTIFY_CLIENT_SECRET=your_spotify_client_secret
+LOG_LEVEL=INFO
+LOG_FILE=tracklistify.log
