--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,14 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# Test audio files
+tests/data/*.mp3
+tests/data/*.wav
+tests/data/*.m4a
+tests/data/*.aac
+tests/data/*.ogg
+tests/data/*.flac
+
 # other files and directories
 temp_segments/
 .vscode/
